estructura de la lista de tareas, con formulario y estilos

--- a/src/hojas-de-estilos/Tarea.css
+++ b/src/hojas-de-estilos/Tarea.css
@@ -30,3 +30,8 @@
   height: 50px;
   margin: 5px;
 }
+/* Tarea completada */
+.tarea-contenedor.completada{
+  background-color: rgb(226, 51, 174);
+  text-decoration: line-through;
+}
