--- a/src/hojas-de-estilos/Tarea.css
+++ b/src/hojas-de-estilos/Tarea.css
@@ -12,6 +12,20 @@
   cursor: pointer;
 }
 
+/* Colores */
+
+.tarea-contenedor:nth-child(3n + 1){
+  background-color: #d0db00;
+}
+
+.tarea-contenedor:nth-child(3n + 2){
+  background-color: #aaea00;
+}
+
+.tarea-contenedor:nth-child(3n + 3){
+  background-color: #73f800;
+}
+
 /* Texto */
 
 .tarea-texto{
@@ -30,6 +44,7 @@
   height: 50px;
   margin: 5px;
 }
+
 /* Tarea completada */
 .tarea-contenedor.completada{
   background-color: rgb(226, 51, 174);
